<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_Sorter" Id="{bcb741d2-04a3-4056-8cd7-6667100128c7}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA' := '1'}
TYPE ST_Sorter :
STRUCT
	{attribute 'OPC.UA.DA' := '0'}
	Config				: ST_SorterConfig;
	InductPE			: BOOL;
	EncoderCounts		: UDINT;
	LastUniqueID		: UINT;
	DischargePE			: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>